package edu.sandiego.comp305;

public interface PricingStrategy {
    double calculatePrice(Order order);
}
